tests/NormalTests/paczka1/small_fuzzy/18528668.err
Error in line 6: A250 S438 65,4
Error in line 12: jiWyV S438 24,5
Error in line 11: RdODVPfNOs S438 40,4
